#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([koa],[0.01],[nirvanan@live.cn])
AC_CONFIG_SRCDIR([src/str.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])
AC_DEFINE(ENABLE_BINRELOC, , [define ENABLE_BINRELOC])
AM_MAINTAINER_MODE

AM_INIT_AUTOMAKE([1.15 -Wall no-define tar-ustar no-dist-gzip dist-xz])

# Checks for programs.
AC_PROG_CC

PKG_PROG_PKG_CONFIG

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# enable debug or not                                                         
AC_ARG_ENABLE(debug, AS_HELP_STRING([--enable-debug], [enable DEBUG mode(default=no)]),[], [enable_debug=no])
AS_IF([test "x$enable_debug" = "xyes"], [CFLAGS="-g2 -O0 -DDEBUG -Wall"], 
	  [test "x$enable_debug" = "xno"], [CFLAGS="-O2 -Wall"], [])

AC_CONFIG_FILES([Makefile
src/Makefile
])

AC_OUTPUT
