
bin_PROGRAMS = koa
AM_CPPFLAGS =
AM_LDFLAGS =
koa_SOURCES = boolobject.c \
boolobject.h \
charobject.c \
charobject.h \
code.c \
code.h \
dict.c \
dict.h \
dictobject.c \
dictobject.h \
doubleobject.c \
doubleobject.h \
floatobject.c \
floatobject.h \
error.c \
error.h \
hash.c \
hash.h \
intobject.c \
intobject.h \
koa.h \
lex.c \
lex.h \
list.c \
list.h \
longobject.c \
longobject.h \
main.c \
nullobject.c \
nullobject.h \
object.c \
object.h \
pool.c \
pool.h \
str.c \
str.h \
strobject.c \
strobject.h \
vec.c \
vec.h \
vecobject.c \
vecobject.h
