
bin_PROGRAMS = koa
AM_CPPFLAGS =
AM_LDFLAGS = 
koa_SOURCES = boolobject.c \
boolobject.h \
builtin.c \
builtin.h \
charobject.c \
charobject.h \
code.c \
code.h \
compound.c \
compound.h \
cmdline.c \
cmdline.h \
dict.c \
dict.h \
dictobject.c \
dictobject.h \
doubleobject.c \
doubleobject.h \
error.c \
error.h \
exceptionobject.c \
exceptionobject.h \
floatobject.c \
floatobject.h \
frame.c \
frame.h \
funcobject.c \
funcobject.h \
gc.c \
gc.h \
hash.c \
hash.h \
interpreter.c \
interpreter.h \
intobject.c \
intobject.h \
int16object.c \
int16object.h \
int32object.c \
int32object.h \
int64object.c \
int64object.h \
int8object.c \
int8object.h \
koa.h \
lex.c \
lex.h \
list.c \
list.h \
longobject.c \
longobject.h \
main.c \
modobject.c \
modobject.h \
misc.c \
misc.h \
nullobject.c \
nullobject.h \
object.c \
object.h \
parser.c \
parser.h \
pool.c \
pool.h \
stack.c \
stack.h \
str.c \
str.h \
strobject.c \
strobject.h \
structobject.c \
structobject.h \
thread.c \
thread.h \
thread_pthread.h \
uint16object.c \
uint16object.h \
uint32object.c \
uint32object.h \
uint64object.c \
uint64object.h \
uint8object.c \
uint8object.h \
unionobject.c \
unionobject.h \
vec.c \
vec.h \
vecobject.c \
vecobject.h
